--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha test",
     "build": "NODE_ENV=production webpack --config  --progress --colors",
-    "start": "node_modules/.bin/babel-node --presets react,es2015 server.js"
+    "start": "node src/app/server.js"
   },
   "repository": {
     "type": "git",
