Test setup complete

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Andela24 brings news from over 70 different news sources together on a single plartform",
   "main": "server.js",
   "scripts": {
-    "test": "mocha test",
+    "test": "mocha -r mock-local-storage --compilers js:babel-register --colors ./test/**/*.spec.js",
+    "test:watch": "npm test -- --watch",
     "build": "NODE_ENV=production webpack --config  --progress --colors",
     "start": "node src/app/server.js"
   },
@@ -24,8 +25,10 @@
   },
   "homepage": "https://github.com/Boluwatifes/andela24#readme",
   "devDependencies": {
+    "babel-register": "^6.24.1",
     "codecov": "^1.0.0",
     "css-loader": "^0.28.0",
+    "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
@@ -34,8 +37,12 @@
     "expect.js": "^0.3.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "mock-local-storage": "^1.0.2",
     "node-sass": "^4.5.2",
+    "react-addons-test-utils": "^15.5.1",
+    "react-test-renderer": "^15.5.4",
     "sass-loader": "^6.0.3",
+    "sinon": "^2.2.0",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "webpack-dev-middleware": "^1.10.2",
@@ -56,11 +63,13 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^3.5.0",
+    "enzyme": "^2.8.2",
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "flux": "^3.1.2",
     "history": "^4.6.1",
     "http-server": "^0.9.0",
+    "jest": "^20.0.0",
     "jquery": "^3.2.1",
     "json-loader": "^0.5.4",
     "lodash": "^4.17.4",
