--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,4 @@ script:
 addons:
     code_climate:
         repo_token: d67c1c74c35d55429a5ef6dd674c7de8939f294c6cb9eda701ef2c5f9a9ec5c7
+after_success: npm run coverage
