--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Andela24 brings news from over 70 different news sources together on a single plartform",
   "main": "server.js",
   "scripts": {
-    "test": "mocha -r mock-local-storage --compilers js:babel-register --colors ./test/**/*.spec.js",
+    "test": "nyc --reporter=html --reporter=text mocha -r mock-local-storage --compilers js:babel-register --colors ./test/**/*.spec.js",
     "test:watch": "npm test -- --watch",
     "build": "NODE_ENV=production webpack --config  --progress --colors",
-    "start": "node src/app/server.js"
+    "start": "node src/app/server.js",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "babel-register": "^6.24.1",
     "codecov": "^1.0.0",
+    "coveralls": "^2.13.1",
     "css-loader": "^0.28.0",
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
@@ -37,8 +39,12 @@
     "expect.js": "^0.3.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "jsdom": "10.1.0",
+    "jsdom-global": "3.0.2",
+    "mocha-jsdom": "^1.1.0",
     "mock-local-storage": "^1.0.2",
     "node-sass": "^4.5.2",
+    "nyc": "^10.3.2",
     "react-addons-test-utils": "^15.5.1",
     "react-test-renderer": "^15.5.4",
     "sass-loader": "^6.0.3",
@@ -74,6 +80,7 @@
     "json-loader": "^0.5.4",
     "lodash": "^4.17.4",
     "mocha": "^2.1.0",
+    "node-localstorage": "^1.3.0",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-cookie": "^2.0.6",
