Edit codeclimate configuration

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,7 +1,30 @@
-JavaScript: true
-Ruby: true
-Python: false
-PHP: false
-
+---
+engines:
+  csslint:
+    enabled: true
+  duplication:
+    enabled: true
+    config:
+      languages:
+      - ruby
+      - javascript
+      - python
+      - php
+  eslint:
+    enabled: true
+  fixme:
+    enabled: true
+ratings:
+  paths:
+  - "**.css"
+  - "**.inc"
+  - "**.js"
+  - "**.jsx"
+  - "**.module"
+  - "**.php"
+  - "**.py"
+  - "**.rb"
 exclude_paths:
-- src/public/**
+- node_modules/
+- test/
+- src/public/
