--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,30 +1,18 @@
 ---
 engines:
-  csslint:
-    enabled: true
   duplication:
     enabled: true
     config:
       languages:
-      - ruby
       - javascript
-      - python
-      - php
   eslint:
     enabled: true
   fixme:
     enabled: true
 ratings:
   paths:
-  - "**.css"
-  - "**.inc"
   - "**.js"
-  - "**.jsx"
-  - "**.module"
-  - "**.php"
-  - "**.py"
-  - "**.rb"
 exclude_paths:
-- node_modules/
-- test/
-- src/public/
+- node_modules/**/*
+- test/**/*
+- src/public/**/*
