--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
     "react-google-login": "^2.8.9",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-social": "^1.9.0",
+    "react-social-sharebuttons": "^2.1.1",
     "request": "^2.81.0",
     "scrape-it": "^3.3.2",
     "webpack": "^*",
