--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Andela24 brings news from over 70 different news sources together on a single plartform",
   "main": "server.js",
   "scripts": {
+    "dev": "webpack-dev-server --content-base src/public --hot --inline",
     "test": "nyc --reporter=html --reporter=text mocha -r mock-local-storage --compilers js:babel-register --colors --report lcovonly -- ./test/**/*.spec.js && codecov --token=2f4bcce5-91f5-43ac-b1d9-cbed53ce36dd",
     "test:watch": "npm test -- --watch",
     "build": "NODE_ENV=production webpack --config  --progress --colors",
@@ -54,6 +55,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "aylien_textapi": "^0.6.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
@@ -72,18 +74,30 @@
     "enzyme": "^2.8.2",
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
+    "firebase": "^4.0.0",
     "flux": "^3.1.2",
+    "fuse-js-latest": "^2.6.2",
+    "fuse.js": "^3.0.3",
     "history": "^4.6.1",
+    "jquery": "^3.2.1",
     "json-loader": "^0.5.4",
+    "jsonp": "^0.2.1",
     "lodash": "^4.17.4",
+    "materialize-css": "^0.98.2",
     "mocha": "^2.1.0",
     "node-localstorage": "^1.3.0",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
+    "react-addons-css-transition-group": "^15.5.2",
+    "react-addons-shallow-compare": "^15.5.2",
     "react-dom": "^15.5.4",
+    "react-dropdown-input": "^0.1.11",
     "react-google-login": "^2.8.9",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-select": "^1.0.0-rc.4",
+    "react-select-search": "^0.5.5",
+    "react-selectize": "^2.1.0",
     "webpack": "^*",
     "webpack-dev-server": "^2.4.5"
   }
