--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expect.js": "^0.3.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "image-webpack-loader": "^3.3.1",
     "jsdom": "10.1.0",
     "jsdom-global": "3.0.2",
     "mocha-jsdom": "^1.1.0",
@@ -98,6 +99,7 @@
     "react-select": "^1.0.0-rc.4",
     "react-select-search": "^0.5.5",
     "react-selectize": "^2.1.0",
+    "react-share": "^1.13.2",
     "sweetalert2": "^6.6.3",
     "webpack": "^*",
     "webpack-dev-server": "^2.4.5"
