--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,11 +3,11 @@
   "plugins": ["react","jsx-a11y","import"],
     "globals": {
     "window": true,
-        "localStorage": true,
-        "$": true,
-        "console": true,
-        "document": true,
-        "location": true
+    "localStorage": true,
+    "$": true,
+    "console": true,
+    "document": true,
+    "location": true
   },
     "rules": {
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
@@ -20,6 +20,7 @@
         "quote-props": "off",
         "jsx-a11y/no-static-element-interactions": "off",
         "one-var": 0,
+        "max-len": ["error", 80],
     "one-var-declaration-per-line": 0,
     "new-cap": 0,
     "consistent-return": 0,
